# IRIS-frontend

./: .gitignore  README.md  capabilities.html  changelog.html  desktop.html  download.html  faq.html  getting-started.html  index.html  package-lock.json  package.json  safety.html  vite.config.js  waitlist.html
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: tauri.ts
docs/desktop/: d0-product-freeze.md  d1-technical-architecture.md
docs/frontend/: website-architecture.md  website-foundation.md
src/: main.js  site.js  styles.css
