[package]
name = "iris_desktop"
version = "0.1.0"
description = "IRIS desktop shell"
authors = ["Drufiy"]
edition = "2021"

[lib]
name = "iris_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
